--- a/lib/assets/fonts/Iconfont/style.css
+++ b/lib/assets/fonts/Iconfont/style.css
@@ -1,16 +1,16 @@
 @font-face {
-  font-family: 'iconfont';
+  font-family: 'bif-iconfont';
   src:
-    url('fonts/iconfont.ttf?yqmwui') format('truetype'),
-    url('fonts/iconfont.woff?yqmwui') format('woff'),
-    url('fonts/iconfont.svg?yqmwui#iconfont') format('svg');
+    url('fonts/bif-iconfont.ttf?dyoia') format('truetype'),
+    url('fonts/bif-iconfont.woff?dyoia') format('woff'),
+    url('fonts/bif-iconfont.svg?dyoia#bif-iconfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'iconfont' !important;
+  font-family: 'bif-iconfont' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -23,21 +23,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-external:before {
-  content: "\e901";
-}
-.icon-arrow-up:before {
-  content: "\edba";
-}
-.icon-arrow-down:before {
-  content: "\edc2";
-}
-.icon-facebook:before {
-  content: "\eef0";
-}
-.icon-instagram:before {
-  content: "\eef1";
-}
-.icon-tdmarker:before {
+.icon-Symbol:before {
   content: "\e900";
+}
+.icon-SymbolWLogotype:before {
+  content: "\e901";
 }
