--- a/lib/assets/fonts/Iconfont/style.css
+++ b/lib/assets/fonts/Iconfont/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'bif-iconfont';
   src:
-    url('fonts/bif-iconfont.ttf?3gdoq1') format('truetype'),
-    url('fonts/bif-iconfont.woff?3gdoq1') format('woff'),
-    url('fonts/bif-iconfont.svg?3gdoq1#bif-iconfont') format('svg');
+    url('fonts/bif-iconfont.ttf?chj9cz') format('truetype'),
+    url('fonts/bif-iconfont.woff?chj9cz') format('woff'),
+    url('fonts/bif-iconfont.svg?chj9cz#bif-iconfont') format('svg');
   font-weight: normal;
   font-style: normal;
 }
